KYLIN-1708 GUI friendly tips for terms in kylin

--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -792,3 +792,36 @@ input:-moz-placeholder {
 .panel-group .panel{
   overflow: auto !important;
 }
+
+.middle-popover .popover{
+  width: 360px;
+  max-width: 360px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.428571429;
+  color:#808080;
+  background-color: #ffffff;
+}
+
+.middle-popover .popover-content, .large-popover .popover-content{
+  font-size: 13px;
+  font-weight: normal;
+  line-height: 18px;
+  display: inline-flex;
+  display: -webkit-inline-flex;
+  word-break: normal;
+}
+
+.middle-popover .popover-content ol, .large-popover .popover-content ol{
+  -webkit-padding-start: 20px;
+  padding-start: 20px;
+}
+.large-popover .popover{
+  width: 600px;
+  max-width: 600px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color:#808080;
+  line-height: 1.428571429;
+  background-color: #ffffff;
+}
